# local-rag

./: .env.exanple  .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  document_loader.py  embeddings.py  language_models.py  optimizers.py  rag_pipeline.py  retrievers.py  utils.py
tests/: test_rag.py
